--- a/locales/ru.json
+++ b/locales/ru.json
@@ -247,7 +247,14 @@
       "scientist": "Ученый",
       "idp": "Внутренне перемещенное лицо (ВПО)",
       "veteran": "Ветеран войны",
-      "regular": "Другой гражданин без жилья"
+      "regular": "Другой гражданин без жилья",
+      "details": {
+        "downPayment20": "Первый взнос от 20% (10% до 26 лет)",
+        "newBuilding3": "Дом до 3 лет",
+        "newBuilding20frontline": "До 20 лет в прифронтовых регионах",
+        "idpBuilding20": "Дом до 20 лет (все регионы)",
+        "loan200to5m": "Кредит от 200 тыс. до 5 млн грн"
+      }
     },
     "features": {
       "title": "Преимущества программы",
@@ -290,7 +297,13 @@
     },
     "footer": {
       "rights": "Все права защищены",
-      "official": "Официальный сайт программы: eoselia.diia.gov.ua"
+      "official": "Официальный сайт программы: eoselia.diia.gov.ua",
+      "description": "Неофициальный калькулятор программы государственного ипотечного кредитования єОселя. Данные актуальны на февраль 2026 года.",
+      "usefulLinks": "Полезные ссылки",
+      "ukrfinzhytlo": "Укрфінжитло (оператор программы)",
+      "resolution856": "Постановление КМУ №856",
+      "bankPartners": "Банки-партнёры",
+      "disclaimer": "Это неофициальный калькулятор. Для оформления кредита обращайтесь в банки-партнёры программы."
     }
   },
   "nav": {
