--- a/locales/uk.json
+++ b/locales/uk.json
@@ -247,7 +247,14 @@
       "scientist": "Науковець",
       "idp": "Внутрішньо переміщена особа (ВПО)",
       "veteran": "Ветеран війни",
-      "regular": "Інший громадянин без житла"
+      "regular": "Інший громадянин без житла",
+      "details": {
+        "downPayment20": "Перший внесок від 20% (10% до 26 років)",
+        "newBuilding3": "Будинок до 3 років",
+        "newBuilding20frontline": "До 20 років у прифронтових регіонах",
+        "idpBuilding20": "Будинок до 20 років (усі регіони)",
+        "loan200to5m": "Кредит від 200 тис. до 5 млн грн"
+      }
     },
     "features": {
       "title": "Переваги програми",
@@ -290,7 +297,13 @@
     },
     "footer": {
       "rights": "Всі права захищені",
-      "official": "Офіційний сайт програми: eoselia.diia.gov.ua"
+      "official": "Офіційний сайт програми: eoselia.diia.gov.ua",
+      "description": "Неофіційний калькулятор програми державного іпотечного кредитування єОселя. Дані актуальні станом на лютий 2026 року.",
+      "usefulLinks": "Корисні посилання",
+      "ukrfinzhytlo": "Укрфінжитло (оператор програми)",
+      "resolution856": "Постанова КМУ №856",
+      "bankPartners": "Банки-партнери",
+      "disclaimer": "Це неофіційний калькулятор. Для оформлення кредиту звертайтесь до банків-партнерів програми."
     }
   },
   "nav": {
