--- a/locales/ru.json
+++ b/locales/ru.json
@@ -49,7 +49,15 @@
       "scientist": "Ученый (государственный/коммунальный)",
       "idp": "Внутренне перемещенное лицо (ВПО)",
       "veteran": "Ветеран войны",
-      "regular": "Другой гражданин без жилья"
+      "regular": "Другой гражданин без жилья",
+      "militaryShort": "Военный",
+      "securityShort": "Полиция/СБУ",
+      "medicShort": "Медик",
+      "teacherShort": "Учитель",
+      "scientistShort": "Ученый",
+      "idpShort": "ВПО",
+      "veteranShort": "Ветеран",
+      "regularShort": "Общая"
     },
     "family": {
       "age": "Ваш возраст",
@@ -69,7 +77,11 @@
       "area": "Общая площадь",
       "totalCost": "Общая стоимость жилья",
       "buildingAge": "Возраст дома",
-      "buildingAgeHint": "Для большинства категорий - до 3 лет, для ВПО - до 10 лет"
+      "buildingAgeHint": "Для большинства категорий - до 3 лет, для ВПО - до 10 лет",
+      "regionPlaceholder": "Например: Киев, Харьков, Днепр...",
+      "areaPlaceholder": "напр. 60",
+      "totalCostPlaceholder": "напр. 2 500 000",
+      "totalCostHint": "Введите сумму цифрами — отформатируется автоматически"
     },
     "loan": {
       "loanTerm": "Срок кредита",
@@ -77,6 +89,23 @@
     },
     "fillAllFields": "Заполните все поля для расчёта",
     "calculationError": "Не удалось выполнить расчёт. Проверьте подключение и попробуйте снова.",
+    "emptyState": {
+      "title": "Заполните основные поля",
+      "subtitle": "для расчёта нужны: площадь, стоимость, город",
+      "progress": "Прогресс заполнения",
+      "fields": "полей",
+      "checkCategory": "Категория",
+      "checkCity": "Город / регион",
+      "checkArea": "Площадь жилья",
+      "checkPrice": "Стоимость (≥ 100 000 ₴)",
+      "checkAge": "Год постройки"
+    },
+    "quickStart": "Быстрый старт:",
+    "presetMilitary": "🪖 Военный · Киев · 60м²",
+    "presetMedic": "🏥 Медик · Харьков · 45м²",
+    "presetIdp": "🚶 ВПО · Львов · 50м²",
+    "linkCopied": "Ссылка скопирована!",
+    "retry": "Попробовать снова",
     "regions": {
       "Kyiv": "Киев",
       "Vinnytsia": "Винницкая область",
@@ -161,6 +190,7 @@
     "bestTotal": "Оптимально в целом",
     "deltaVsBase": "Разница",
     "baseScenario": "Базовый",
+    "printBtn": "Распечатать",
     "whyThisResult": "Почему именно такой результат",
     "whyRate": "Ставка: {rate1}% → {rate2}%",
     "whyTerm": "Срок: {years} лет",
@@ -236,7 +266,10 @@
       "title": "Ипотечная госпрограмма «єОселя»",
       "subtitle": "Доступное жилье для украинцев под низкий процент - от 3% годовых",
       "calculateBtn": "Рассчитать ипотеку",
-      "learnMore": "Узнать больше"
+      "learnMore": "Узнать больше",
+      "badge1": "20+ банков",
+      "badge2": "до 5 млн грн",
+      "badge3": "до 20 лет"
     },
     "categories": {
       "title": "Категории участников и ставки",
@@ -248,6 +281,9 @@
       "idp": "Внутренне перемещенное лицо (ВПО)",
       "veteran": "Ветеран войны",
       "regular": "Другой гражданин без жилья",
+      "rateSubtitle": "годовых • первые 10 лет",
+      "rateAfter3": "6% через 10 лет",
+      "rateAfter7": "10% через 10 лет",
       "details": {
         "downPayment20": "Первый взнос от 20% (10% до 26 лет)",
         "newBuilding3": "Дом до 3 лет",
@@ -287,7 +323,8 @@
       },
       "step3": {
         "title": "Подайте заявку",
-        "description": "Подайте заявку через приложение «Дія» и получите решение банка"
+        "description": "Подайте заявку через приложение «Дія» и получите решение банка",
+        "submitBtn": "Подать заявку в Дії"
       }
     },
     "cta": {
