--- a/locales/uk.json
+++ b/locales/uk.json
@@ -49,7 +49,15 @@
       "scientist": "Науковець (державний/комунальний заклад)",
       "idp": "Внутрішньо переміщена особа (ВПО)",
       "veteran": "Ветеран війни",
-      "regular": "Інший громадянин без житла"
+      "regular": "Інший громадянин без житла",
+      "militaryShort": "Військовий",
+      "securityShort": "Поліція/СБУ",
+      "medicShort": "Медик",
+      "teacherShort": "Вчитель",
+      "scientistShort": "Науковець",
+      "idpShort": "ВПО",
+      "veteranShort": "Ветеран",
+      "regularShort": "Загальна"
     },
     "family": {
       "age": "Ваш вік",
@@ -69,7 +77,11 @@
       "area": "Загальна площа",
       "totalCost": "Загальна вартість житла",
       "buildingAge": "Вік будинку",
-      "buildingAgeHint": "Для більшості категорій - до 3 років, для ВПО - до 10 років"
+      "buildingAgeHint": "Для більшості категорій - до 3 років, для ВПО - до 10 років",
+      "regionPlaceholder": "Наприклад: Київ, Бровари, Харків...",
+      "areaPlaceholder": "напр. 60",
+      "totalCostPlaceholder": "напр. 2 500 000",
+      "totalCostHint": "Введіть суму цифрами — відформатується автоматично"
     },
     "loan": {
       "loanTerm": "Термін кредиту",
@@ -77,6 +89,23 @@
     },
     "fillAllFields": "Заповніть всі поля для розрахунку",
     "calculationError": "Не вдалося виконати розрахунок. Перевірте з'єднання та спробуйте ще раз.",
+    "emptyState": {
+      "title": "Заповніть основні поля",
+      "subtitle": "для розрахунку потрібні: площа, вартість, місто",
+      "progress": "Прогрес заповнення",
+      "fields": "полів",
+      "checkCategory": "Категорія",
+      "checkCity": "Місто / регіон",
+      "checkArea": "Площа житла",
+      "checkPrice": "Вартість (≥ 100 000 ₴)",
+      "checkAge": "Рік будівлі"
+    },
+    "quickStart": "Швидкий старт:",
+    "presetMilitary": "🪖 Військовий · Київ · 60м²",
+    "presetMedic": "🏥 Медик · Харків · 45м²",
+    "presetIdp": "🚶 ВПО · Львів · 50м²",
+    "linkCopied": "Посилання скопійовано!",
+    "retry": "Спробувати ще раз",
     "regions": {
       "Kyiv": "Київ",
       "Vinnytsia": "Вінницька область",
@@ -161,6 +190,7 @@
     "bestTotal": "Оптимально загалом",
     "deltaVsBase": "Різниця",
     "baseScenario": "Базовий",
+    "printBtn": "Надрукувати",
     "whyThisResult": "Чому саме такий результат",
     "whyRate": "Ставка: {rate1}% → {rate2}%",
     "whyTerm": "Термін: {years} років",
@@ -236,7 +266,10 @@
       "title": "Іпотечна держпрограма «єОселя»",
       "subtitle": "Доступне житло для українців під низький відсоток - від 3% річних",
       "calculateBtn": "Розрахувати іпотеку",
-      "learnMore": "Дізнатися більше"
+      "learnMore": "Дізнатися більше",
+      "badge1": "20+ банків",
+      "badge2": "до 5 млн грн",
+      "badge3": "до 20 років"
     },
     "categories": {
       "title": "Категорії учасників та ставки",
@@ -248,6 +281,9 @@
       "idp": "Внутрішньо переміщена особа (ВПО)",
       "veteran": "Ветеран війни",
       "regular": "Інший громадянин без житла",
+      "rateSubtitle": "річних • перші 10 років",
+      "rateAfter3": "6% після 10 років",
+      "rateAfter7": "10% після 10 років",
       "details": {
         "downPayment20": "Перший внесок від 20% (10% до 26 років)",
         "newBuilding3": "Будинок до 3 років",
@@ -287,7 +323,8 @@
       },
       "step3": {
         "title": "Подайте заявку",
-        "description": "Подайте заявку через додаток «Дія» та отримайте рішення банку"
+        "description": "Подайте заявку через додаток «Дія» та отримайте рішення банку",
+        "submitBtn": "Подати заявку в Дії"
       }
     },
     "cta": {
